[tool.poetry]
name = "dt-apriltags"
version = "0.0.0"
description = "apriltags"
authors = []
readme = "README.md"
repository = "https://github.com/terraform-industries/lib-dt-apriltags"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"

[tool.poetry.group.test.dependencies]
opencv-python = "^4.7.0.72"
pyyaml = "^6.0"

[build-system]
requires = ["setuptools>=40.8.0", "numpy", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
